--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <body>
     <section class="content">
-        <h1 class="title">Pokedex - 1º generation</h1>
+        <h1 class="title">Pokedex </h1>
 
         <ol id="pokemonList" class="pokemons">
             <!-- ..... Pokemons here ..... -->
